--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.5.2",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
@@ -50,5 +51,6 @@
     "scrollmagic": "^2.0.5",
     "url-loader": "^0.5.7",
     "velocity-react": "^1.1.11"
-  }
+  },
+  "pre-commit": "lint"
 }
